There's a weird visual issue on mobile when horizontal where the header doesn't stretch to fill. Maybe this'll fix that.

--- a/themes/slender/sass/style.scss
+++ b/themes/slender/sass/style.scss
@@ -107,6 +107,7 @@ html {
 
 body {
 	min-height: 100vh;
+	min-width: 100vw;
 	display: flex;
 	flex-direction: column;
 }
